--- a/Sources/frontend/.env.example
+++ b/Sources/frontend/.env.example
@@ -1,7 +1,3 @@
-# !STARTERCONF Duplicate this to .env.local
-
-# DEVELOPMENT TOOLS
-# Ideally, don't add them to production deployment envs
-# !STARTERCONF Change to true if you want to log data
-NEXT_PUBLIC_SIMSERVER_PORT=8120
-NEXT_PUBLIC_SIMSERVER_HOST=localhost
+# Example of .env file. Copy this to .env or .env.local and do not check the file into vsc
+# Specify the protocol for localhost!
+NEXT_PUBLIC_EXTERNAL_SIM_API_PREFIX=http://localhost:8000
