--- a/Sources/proxy/nginx.conf
+++ b/Sources/proxy/nginx.conf
@@ -4,21 +4,23 @@ events {
 
 http {
     server {
-        # TODO: HTTP and HTTPS on the same port
+        # Listen on both HTTP and HTTPS
         listen 3120;
         listen 3121 ssl;
 
-        # If the file exists, include it and enable SSL
+        # Include SSL configuration if SSL certificates are present
         include ssl.conf*;
+
+        # Use an environment variable for the API prefix, default to '/api'
+        set $api_prefix ${SIM_API_PREFIX:-/api};
 
         location / {
             proxy_pass http://web:3000;
         }
 
-        location /api/sim {
+        location ~ ^${api_prefix}/sim {
             proxy_pass http://simserver:8000;
-            rewrite ^/api/sim/(.*)$ /$1 break;
+            rewrite ^${api_prefix}/sim/(.*)$ /$1 break;
         }
     }
 }
-
