--- a/Sources/frontend/Dockerfile
+++ b/Sources/frontend/Dockerfile
@@ -19,13 +19,13 @@ COPY . .
 # The available args and default values are defined here
 
 ARG INTERNAL_SIM_API_PREFIX=simserver:8000
-ENV NEXT_PUBLIC_INTERNAL_SIM_API_PREFIX=$INTERNAL_SIM_API_PREFIX
+ENV INTERNAL_SIM_API_PREFIX=$INTERNAL_SIM_API_PREFIX
 
 ARG EXTERNAL_SIM_API_PREFIX="http://localhost:8000"
-ENV NEXT_PUBLIC_EXTERNAL_SIM_API_PREFIX=$EXTERNAL_SIM_API_PREFIX
+ENV EXTERNAL_SIM_API_PREFIX=$EXTERNAL_SIM_API_PREFIX
 
 ARG BASE_PATH=""
-ENV NEXT_PUBLIC_BASE_PATH=$BASE_PATH
+ENV BASE_PATH=$BASE_PATH
 
 # End of args
 
