--- a/Sources/frontend/tsconfig.json
+++ b/Sources/frontend/tsconfig.json
@@ -24,7 +24,7 @@
       "@/*": [
         "./src/*"
       ],
-      "~/*": [
+      "@public/*": [
         "./public/*"
       ]
     },
@@ -42,6 +42,7 @@
     ".next/types/**/*.ts",
     "next.config.mjs",
     "tests",
+    "./public/*",
  "src/constant/env.js"  ],
   "exclude": [
     "node_modules"
