Umami self-registration

--- a/Sources/docker-compose.yml
+++ b/Sources/docker-compose.yml
@@ -74,7 +74,7 @@ services:
         max-file: "3"
 
   umami:
-    image: sparanoid/umami:postgresql-latest
+    image: ghcr.io/umami-software/umami:postgresql-latest
     ports:
       - 8090:3000
     environment:
